	- unco: exit after running, do not fall back to default behaviour
	- mklabel: argument in remote vob; and -all option with -over
	- mklbtype: fix to Label type not found: "-rep"; error report
	- ci in user interactions preempting mode

0.14 Sat Nov 28 22:07:04 GMTST 2009
        - co: die if no element
	- rmbranch: handle the interactive case of missing -f flag
	- mklbtype -arc, and mkbrtype -arc

0.15 Sun Nov 29 11:59:47 GMTST 2009
     	- mkbrtype documentation, and comments to the archived type.
	- postponed 'early return' until after user interaction.

0.16 Tue Dec 15 10:32:40 GMTST 2009
        - mklabel: skip symlinks
	- mklbtype -fam: fix when remote vob non -rep and exists

0.17 Thu Jan 14 13:09:43 GMTST 2010
        - mklabel: fix to -over ---rep implicit only for family types
	- mklbtype: fix to -fam when explicit type prefix used
	- checkin: fixes to -diff (from genealogy) and -rec
	- mklbtype -inc now unlocks the label types, and re-locks the fixed

0.18 Sat Jan 16 17:15:31 GMTST 2010
        - co: detect unrecognize option errors
	- unco: bugfix to removing useless branch

0.19 Sun Feb 14 16:37:43 GMTST 2010
        - VobPathConv: fix to the conversion of Windows/cygwin paths
	- mkbranch: argument in other vob
	- error handling: mklbtype and checkin
	- ForceLock: don't use 'state'--the ssh connection may time out
	- mklbtype -inc: skip existing but unlinked type
	- mklbtype -inc: add the comment option only once if several types
	- diff: fix for the no predecessor case, and support for -n flag
	- lock -rep: fix for no -nusers
	- unco: skip the dialog for dirs; rmbranch before handling next arg.

0.20 Sat Feb 20 17:58:45 GMTST 2010
        - mkbrtype -arc -ord and in a remote vob
	- support for global types.

0.21 Sat Jun  5 17:00:24 GMTDT 2010
        - mkbranch with standard view (not ##:BranchOff)
	- hyperlink and attribute types -shared
	- mklbtype -arc: renamed new type to temporary, for later use